codegen/ui_tests/non_clonable.stderr
WARN rustc_metadata::locator no metadata found: failed to mmap rmeta metadata: '\\?\$WORKSPACE/target\tests\target\x86_64-pc-windows-msvc\debug\deps\librhai_codegen_tests-13fbbdaa684db49e.rmeta'
WARN rustc_metadata::locator no metadata found: failed to mmap rmeta metadata: '\\?\$WORKSPACE/target\tests\target\x86_64-pc-windows-msvc\debug\deps\librhai_codegen_tests-1b00becb051b9b4f.rmeta'
error[E0277]: the trait bound `NonClonable: Clone` is not satisfied
  --> ui_tests/non_clonable.rs:11:23
   |
11 | pub fn test_fn(input: NonClonable) -> bool {
   |                       ^^^^^^^^^^^ the trait `Clone` is not implemented for `NonClonable`
